@@ -12,6 +12,7 @@
 # 2018-10-19: changed class of predictorefflist to c("predictorefflist", "efflist", "list")
 # 2018-11-19: added xlevels argument with default 5 to be applied to conditioning predictors and
 #             focal.levels argument with default 50 to be applied to focal predictor. J. Fox
+# 2019-04-13: changed behavior of xlevels default to match Effect.lm() when residuals=TRUE. J. Fox
 
 
 # removed xlevels argument 8/9/18
@@ -28,6 +29,12 @@ predictorEffect.svyglm <- function(predictor, mod, focal.levels=50, xlevels=5, .
 #simplified 12/10/17
 # removed xlevels argument 8/9/18
 predictorEffect.default <- function(predictor, mod, focal.levels=50, xlevels=5, ...){
+  dots <- list(...)
+  which.residuals <- which(!is.na(sapply(names(dots), 
+                                         function(x) pmatch(x, c("residuals", "partial.residuals")))))
+  if (length(which.residuals) != 0){
+    if (isTRUE(dots[[which.residuals]]) && missing(xlevels)) xlevels <- list()
+  }
   form <- Effect.default(NULL, mod) #returns the fixed-effects formula
   all.vars <- all.vars(parse(text=form))
   # find the right effect to use
@@ -66,6 +73,12 @@ predictorEffects <- function(mod, predictors, focal.levels=50, xlevels=5, ...){
 
 # rewritten, simplified, 12/08/17, bug in formulas fixed 01/24/2018
 predictorEffects.default <- function(mod, predictors = ~ ., focal.levels=50, xlevels=5, ...) {
+  dots <- list(...)
+  which.residuals <- which(!is.na(sapply(names(dots), 
+                                         function(x) pmatch(x, c("residuals", "partial.residuals")))))
+  if (length(which.residuals) != 0){
+    if (isTRUE(dots[[which.residuals]]) && missing(xlevels)) xlevels <- list()
+  }
 # The next function removes offset(s) from a formula, used for mform and cform
   no.offset <- function(x, preserve = NULL) {
     k <- 0
@@ -94,14 +107,16 @@ predictorEffects.default <- function(mod, predictors = ~ ., focal.levels=50, xle
     if (!is.vector(focal.levels) || !is.numeric(focal.levels) || length(focal.levels) > 1 || round(focal.levels) != focal.levels)
       stop("focal.levels must be a length 1 positive\nwhole-number numeric vector or a list")
   }
-  if (is.list(xlevels)){
-    for(mvar in mvars){
-      if (!is.null(xlevels[[mvar]])) next
-      xlevels[[mvar]] <- 5
+  if (length(xlevels) > 0){
+    if (is.list(xlevels)){
+      for(mvar in mvars){
+        if (!is.null(xlevels[[mvar]])) next
+        xlevels[[mvar]] <- 5
+      }
+    } else{
+      if (!is.vector(xlevels) || !is.numeric(xlevels) || length(xlevels) > 1 || round(xlevels) != xlevels)
+        stop("xlevels must be a length 1 positive\nwhole-number numeric vector or a list")
     }
-  } else{
-    if (!is.vector(xlevels) || !is.numeric(xlevels) || length(xlevels) > 1 || round(xlevels) != xlevels)
-      stop("xlevels must be a length 1 positive\nwhole-number numeric vector or a list")
   }
 # check that 'cvars' is a subset of 'mvars'. If so apply predictorEffect
   if(!all(cvars %in% mvars)){
